Finish altering scripts and allow edit Properties